2014-08-08  Joseph Pecoraro  <pecoraro@apple.com>

        make clean does not work in OpenSource, fails in WebKitLibraries
        https://bugs.webkit.org/show_bug.cgi?id=135734

        Reviewed by David Kilzer.

        * Scripts/copy-webkitlibraries-to-product-directory:
        Add a --clean switch that removes possible WebKitSystemInterface
        and LLVM libraries and headers that may have been copied to the
        product directory.

2014-08-08  Joseph Pecoraro  <pecoraro@apple.com>

        commit-log-message has extra blank line at the top of pre-populated message
        https://bugs.webkit.org/show_bug.cgi?id=135744

        Reviewed by Csaba Osztrogonác.

        Do not add a blank leading line in single ChangeLog commit messages.

        * Scripts/commit-log-editor:
        (createCommitMessage):
        * Scripts/webkitpy/common/checkout/checkout_unittest.py:
        (test_commit_message_for_one_reviewed_changelog):
        (test_commit_message_for_one_rollout_changelog):

2014-08-07  Brent Fulgham  <bfulgham@apple.com>

        [Win] Unreviewed gardening.

        Have 'Assemble Build Logs' step work properly for DebugSuffix target
        (both 32-bit and 64-bit).

        * win/AssembleBuildLogs/AssembleBuildLogs.vcxproj:

2014-08-07  Benjamin Poulain  <bpoulain@apple.com>

        Get rid of INPUT_SPEECH
        https://bugs.webkit.org/show_bug.cgi?id=135672

        Reviewed by Andreas Kling.

        * DumpRenderTree/TestRunner.cpp:
        (TestRunner::staticFunctions):
        (addMockSpeechInputResultCallback): Deleted.
        (setMockSpeechInputDumpRectCallback): Deleted.
        * DumpRenderTree/TestRunner.h:
        * DumpRenderTree/mac/TestRunnerMac.mm:
        (TestRunner::addMockSpeechInputResult): Deleted.
        (TestRunner::setMockSpeechInputDumpRect): Deleted.
        (TestRunner::startSpeechInput): Deleted.

2014-08-07  Bem Jones-Bey  <bjonesbe@adobe.com>
